--- a/net/aws/Cargo.toml
+++ b/net/aws/Cargo.toml
@@ -16,13 +16,14 @@ futures = "0.3"
 gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_16"] }
-aws-config = "0.52.0"
-aws-sdk-s3 = "0.22.0"
-aws-sdk-transcribe = "0.22.0"
-aws-types = "0.52.0"
-aws-sig-auth = "0.52.0"
-aws-smithy-http = { version = "0.52.0", features = [ "rt-tokio" ] }
-aws-smithy-types = "0.52.0"
+aws-config = "0.53.0"
+aws-sdk-s3 = "0.23.0"
+aws-sdk-transcribe = "0.23.0"
+aws-types = "0.53.0"
+aws-credential-types = "0.53.0"
+aws-sig-auth = "0.53.0"
+aws-smithy-http = { version = "0.53.0", features = [ "rt-tokio" ] }
+aws-smithy-types = "0.53.0"
 http = "0.2.7"
 chrono = "0.4"
 url = "2"
