gopbuffer: implement element buffering of an entire GOP
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1349>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "generic/sodium",
     "generic/threadshare",
     "generic/inter",
+    "generic/gopbuffer",
 
     "mux/flavors",
     "mux/fmp4",
@@ -69,6 +70,7 @@ default-members = [
     "generic/originalbuffer",
     "generic/threadshare",
     "generic/inter",
+    "generic/gopbuffer",
 
     "mux/fmp4",
     "mux/mp4",
