--- a/deny.toml
+++ b/deny.toml
@@ -128,6 +128,11 @@ version = "0.1"
 name = "base64"
 version = "0.13"
 
+# Various crates depend on an older version of windows-sys
+[[bans.skip]]
+name = "windows-sys"
+version = "0.42"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
