--- a/deny.toml
+++ b/deny.toml
@@ -122,6 +122,9 @@ version = "0.6"
 [[bans.skip]]
 name = "hermit-abi"
 version = "0.1"
+[[bans.skip]]
+name = "hermit-abi"
+version = "0.2"
 
 # Various crates depend on an older version of base64
 [[bans.skip]]
