--- a/net/onvif/Cargo.toml
+++ b/net/onvif/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-onvif"
-version = "0.10.0-alpha.1"
+version = "0.10.0"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
 license = "MPL-2.0"
