--- a/net/webrtc/protocol/Cargo.toml
+++ b/net/webrtc/protocol/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-webrtc-signalling-protocol"
-version = "0.10.0-alpha.1"
+version = "0.10.0"
 edition = "2021"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
