--- a/text/wrap/Cargo.toml
+++ b/text/wrap/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gst-plugin-textwrap"
-version = "0.10.0-alpha.1"
+version = "0.10.0"
 authors = ["Mathieu Duponchelle <mathieu@centricular.com>"]
 license = "MPL-2.0"
 edition = "2021"
