--- a/generic/sodium/Cargo.toml
+++ b/generic/sodium/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 rust-version = "1.63"
 
 [dependencies]
-gst = { package="gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
-gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
+gst = { package="gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.20", version = "0.20" }
+gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.20", version = "0.20" }
 sodiumoxide = "0.2.1"
 once_cell = "1.3.0"
 hex = "0.4"
@@ -27,10 +27,14 @@ rand = "0.8"
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.20"
+version = "0.20"
 package="gstreamer-check"
 
 [dev-dependencies.gst-app]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.20"
+version = "0.20"
 package="gstreamer-app"
 
 [lib]
