--- a/text/regex/Cargo.toml
+++ b/text/regex/Cargo.toml
@@ -14,6 +14,8 @@ regex = "1.5"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.20"
+version = "0.20"
 package="gstreamer"
 
 [lib]
@@ -26,6 +28,8 @@ gst-plugin-version-helper = { path="../../version-helper" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.20"
+version = "0.20"
 package="gstreamer-check"
 
 [features]
