--- a/text/wrap/Cargo.toml
+++ b/text/wrap/Cargo.toml
@@ -15,6 +15,8 @@ hyphenation = "0.8"
 
 [dependencies.gst]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.20"
+version = "0.20"
 package="gstreamer"
 
 [lib]
@@ -27,6 +29,8 @@ gst-plugin-version-helper = { path="../../version-helper" }
 
 [dev-dependencies.gst-check]
 git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
+branch = "0.20"
+version = "0.20"
 package="gstreamer-check"
 
 [features]
