Add versions to local dependencies

--- a/audio/csound/Cargo.toml
+++ b/audio/csound/Cargo.toml
@@ -29,7 +29,7 @@ name = "csound-effect"
 path = "examples/effect_example.rs"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [features]
 static = []
