--- a/net/ndi/Cargo.toml
+++ b/net/ndi/Cargo.toml
@@ -21,7 +21,7 @@ atomic_refcell = "0.1"
 libloading = "0.7"
 
 [build-dependencies]
-gst-plugin-version-helper = { path = "../../version-helper" }
+gst-plugin-version-helper = { path = "../../version-helper", version = "0.7" }
 
 [features]
 default = ["interlaced-fields", "sink"]
