--- a/deny.toml
+++ b/deny.toml
@@ -136,6 +136,11 @@ version = "0.13"
 name = "windows-sys"
 version = "0.42"
 
+# Various crates depend on an older version of socket2
+[[bans.skip]]
+name = "socket2"
+version = "0.4"
+
 [sources]
 unknown-registry = "deny"
 unknown-git = "deny"
