--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -33,6 +33,18 @@ gst_plugin_webrtc_protocol = { path="protocol", package = "gst-plugin-webrtc-sig
 human_bytes = "0.4"
 url = "2"
 
+aws-config = "0.52.0"
+aws-types = "0.52.0"
+aws-sig-auth = "0.52.0"
+aws-smithy-http = { version = "0.52.0", features = [ "rt-tokio" ] }
+aws-smithy-types = "0.52.0"
+aws-sdk-kinesisvideo = "0.22.0"
+aws-sdk-kinesisvideosignaling = "0.22.0"
+http = "0.2.7"
+chrono = "0.4"
+data-encoding = "2.3.3"
+url-escape = "0.1.1"
+
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
