--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -47,6 +47,10 @@ chrono = "0.4"
 data-encoding = "2.3.3"
 url-escape = "0.1.1"
 
+reqwest = { version = "0.11", features = ["default-tls"] }
+parse_link_header = {version = "0.3", features = ["url"]}
+async-recursion = "1.0.0"
+
 [dev-dependencies]
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
