ci: add check for symlinks
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1169>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -417,6 +417,7 @@ check commits:
     - when: 'always'
   script:
     - ci-fairy check-commits --textwidth 0 --no-signed-off-by
+    - ci/check-for-symlinks.sh
 
 clippy:
   extends: .img-stable
