ci: check for typos
Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1170>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -400,6 +400,14 @@ rustfmt:
     - cargo fmt --version
     - cargo fmt -- --color=always --check
 
+typos:
+  extends: .img-stable
+  stage: "lint"
+  rules:
+    - when: 'always'
+  script:
+    - typos
+
 gstwebrtc-api lint:
   image: node:lts
   stage: "lint"
