--- a/net/hlssink3/Cargo.toml
+++ b/net/hlssink3/Cargo.toml
@@ -16,6 +16,7 @@ gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.18", version 
 once_cell = "1.7.2"
 m3u8-rs = "5.0"
 regex = "1"
+chrono = "0.4"
 
 [dev-dependencies]
 gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.21", version = "0.21" }
