--- a/mux/fmp4/Cargo.toml
+++ b/mux/fmp4/Cargo.toml
@@ -28,6 +28,9 @@ gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org
 gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
 m3u8-rs = "5.0"
 chrono = "0.4"
+dash-mpd = { version = "0.7", default-features = false }
+quick-xml = { version = "0.28", features = ["serialize"] }
+serde = "1"
 
 [build-dependencies]
 gst-plugin-version-helper = { path="../../version-helper" }
