--- a/utils/togglerecord/Cargo.toml
+++ b/utils/togglerecord/Cargo.toml
@@ -20,6 +20,7 @@ once_cell = "1.0"
 
 [dev-dependencies]
 either = "1.0"
+gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
 
 [lib]
 name = "gsttogglerecord"
