webrtcsink: expose consumer-pipeline-created signal
This signal is emitted as soon as the pipeline for each consumer
is created, and can be used by applications that require a greater
level of control over webrtcsink's internals.

An example is also provided to demonstrate usage

Part-of: <https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs/-/merge_requests/1220>

--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -82,3 +82,6 @@ requires_private = "gstreamer-rtp-1.0 >= 1.20, gstreamer-webrtc-1.0 >= 1.20, gst
 
 [[example]]
 name = "webrtcsink-stats-server"
+
+[[example]]
+name = "webrtcsink-high-quality-tune"
