--- a/net/webrtc/Cargo.toml
+++ b/net/webrtc/Cargo.toml
@@ -69,9 +69,10 @@ path = "src/lib.rs"
 gst-plugin-version-helper = { path = "../../version-helper", version = "0.8" }
 
 [features]
+default = ["v1_22"]
 static = []
 capi = []
-gst1_22 = ["gst/v1_22", "gst-app/v1_22", "gst-video/v1_22", "gst-webrtc/v1_22", "gst-sdp/v1_22", "gst-rtp/v1_22"]
+v1_22 = ["gst/v1_22", "gst-app/v1_22", "gst-video/v1_22", "gst-webrtc/v1_22", "gst-sdp/v1_22", "gst-rtp/v1_22"]
 doc = []
 
 [package.metadata.capi]
